# WClouds

./: .gitignore  README.md  WClouds_Doku_POS.md  pyproject.toml
Backend/: database.py  main.py  models.py
Backend/routers/: auth.py  base.py  file.py  user.py
WClouds_WPF/: WClouds_Doku_POS.md  WClouds_WPF.sln
WClouds_WPF/Test/: AuthenticatorTests.cs  BackupServiceTests.cs  EncryptionServiceTests.cs  ModelAndServiceTests.cs  ShareServiceTests.cs  StorageServiceTests.cs  Test.csproj  TestAssemblySettings.cs  TestHelpers.cs  WebserviceTests.cs
WClouds_WPF/WCloudsSync/: CloudFilesApi.cs  NavPaneRegistrar.cs  Program.cs  SessionStore.cs  SyncProvider.cs  WCloudsApiClient.cs  WCloudsSync.csproj
WClouds_WPF/WClouds_WPF/: App.xaml  App.xaml.cs  DataPage.xaml  DataPage.xaml.cs  DataSettingsPage.xaml  DataSettingsPage.xaml.cs  HistoryDialog.xaml  HistoryDialog.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  RegistratePage.xaml  RegistratePage.xaml.cs  ShareDialog.xaml  ShareDialog.xaml.cs  SignInPage.xaml  SignInPage.xaml.cs  WClouds_WPF.csproj
WClouds_WPF/WClouds_WPF/GUI/: AnimatedBackground.cs
WClouds_WPF/WClouds_WPF/Logic/: Authenticator.cs  BackupService.cs  EncryptionService.cs  FileExplorerEntry.cs  HistoryEntry.cs  IStorable.cs  Info.cs  LoginResponse.cs  SavedDirectory.cs  SavedFile.cs  ShareService.cs  StorageService.cs  User.cs  Webservice.cs
